--- a/pom.xml
+++ b/pom.xml
@@ -69,9 +69,9 @@
 		
 		
 		<dependency>
-		    <groupId>ma.glasnost.orika</groupId>
-		    <artifactId>orika-tests-jdk8</artifactId>
-		    <version>1.5.2</version>
+			<groupId>ma.glasnost.orika</groupId>
+			<artifactId>orika-core</artifactId>
+			<version>1.5.2</version>
 		</dependency>
 	</dependencies>
 
